2002-03-13  Wolfram Gloger  <wg@malloc.de>

	* malloc/malloc.c (sYSMALLOc): Don't change brk if mmap failed.

2002-03-02  Andreas Schwab  <schwab@suse.de>

	* stdio-common/vfprintf.c (process_arg): Fix decimal format with
	'h' flag and positional arg.
	* stdio-common/tst-printf.c (rfg3): New function to test
	positional arguments.
	(main): Fix some warnings.

2002-03-13  Jakub Jelinek  <jakub@redhat.com>

	* elf/dl-minimal.c (_itoa): Use _itoa_lower_digits_internal if SHARED.
	* elf/dl-reloc.c (_dl_reloc_bad_type): Likewise.

2002-03-13  Ulrich Drepper  <drepper@redhat.com>

	* grp/initgroups.c (__nss_group_data): Declare as hidden.

	* include/locale.h (_nl_C_locobj): Declare as hidden.

	* time/asctime.c (_nl_C_LC_TIME): Declare as hidden.
	* time/strptime.c (_nl_C_LC_TIME): Likewise.

	* include/netinet/in.h (in6addr_any_internal): Mark as hidden.

	* include/sys/gmon.h: Declare _gmonparam as hidden.

	* locale/lc-ctype.c (__ctype32_wctype): Declare as hidden.
	(__ctype32_wctrans): Likewise.
	(__ctype32_width): Likewise.

	* sysdeps/unix/sysv/linux/ttyname.c: Comment out definition and
	use of __ttyname.

	* posix/regcomp.c (__re_error_msgid): Renamed from re_error_msgid.
	Define as hidden.
	(__re_error_msgid_idx): Renamed from re_error_msgid_idx.  Define as
	hidden.  Change all users of these variables.

	* posix/regex_internal.h (__re_error_msgid): Renamed from
	re_error_msgid.  Declare as hidden.
	(__re_error_msgid_idx): Renamed from re_error_msgid_idx.  Declare as
	hidden.

	* stdio-common/reg-printf.c (__printf_arginfo_table): Define as hidden.
	(__printf_function_table): Likewise.
	* stdio-common/printf-parse.h (__printf_arginfo_table): Declare as
	hidden.
	(__printf_function_table): Likewise.

	* nscd/nscd_proto.h: Declare __nss_not_use_nscd_passwd,
	__nss_not_use_nscd_group, and __nss_not_use_nscd_hosts as hidden.

	* nss/XXX-lookup.c (DATABASE_NAME_SYMBOL): Define as hidden.
	* nss/nsswitch.c: Declare _nss_*_database as hidden.
